rock:修改了邮件模板，使用Thymeleaf动态加载数据。

--- a/nobug-shop-service/nobug-shop-service-send-mail/src/main/resources/templates/mail_model.html
+++ b/nobug-shop-service/nobug-shop-service-send-mail/src/main/resources/templates/mail_model.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-欢迎您<span th:text="${username}"></span>!<a href='${url}'>点击此处，完成激活！</a>
+欢迎您<span th:text="${username}"></span>!<a th:href="${url}">点击此处，完成激活！</a>
 感谢您的注册！
 
 </body>
