rock:优化了账号注册的业务逻辑，提升代码健壮性，账号激活完成。

--- a/nobug-shop-service/nobug-shop-service-send-mail/src/main/resources/templates/mail_model.html
+++ b/nobug-shop-service/nobug-shop-service-send-mail/src/main/resources/templates/mail_model.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 
-欢迎您<span th:text="${username}"></span>!<a th:href="${url}">点击此处，完成激活！</a>
-感谢您的注册！
+感谢您注册本站！<span th:text="${username}"></span>!<a th:href="${url}">点击此处，完成激活！</a>
+此验证链接十五分钟内有效。
 
 </body>
 </html>
