--- a/nobug-shop-web/nobug-shop-web-register/src/main/resources/templates/register.html
+++ b/nobug-shop-web/nobug-shop-web-register/src/main/resources/templates/register.html
@@ -4,7 +4,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>注册</title>
-    <!--    <base href="http://47.98.124.70/html/">-->
+    <base href="http://47.98.124.70/html/">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -12,10 +12,10 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="Cache-Control" content="no-siteapp"/>
 
-    <link rel="stylesheet" href="../static/assets/css/amazeui.min.css"/>
-    <link href="../static/css/dlstyle.css" rel="stylesheet" type="text/css">
-    <script src="../static/assets/js/jquery.min.js"></script>
-    <script src="../static/assets/js/amazeui.min.js"></script>
+    <link rel="stylesheet" href="assets/css/amazeui.min.css"/>
+    <link href="css/dlstyle.css" rel="stylesheet" type="text/css">
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/amazeui.min.js"></script>
 
 
 </head>
@@ -23,12 +23,12 @@
 <body>
 
 <div class="login-boxtitle">
-    <a href="home/demo.html"><img alt="" src="../static/images/logobig.png"/></a>
+    <a href="home/demo.html"><img alt="" src="images/logobig.png"/></a>
 </div>
 
 <div class="res-banner">
     <div class="res-main">
-        <div class="login-banner-bg"><span></span><img src="../static/images/big.jpg"/></div>
+        <div class="login-banner-bg"><span></span><img src="images/big.jpg"/></div>
         <div class="login-box">
 
             <div class="am-tabs" id="doc-my-tabs">
@@ -156,6 +156,7 @@
                         alert("注册失败，服务器出现了一些小问题...")
                     }
                 })
+                alert("发送验证码成功，请勿重复发送验证码！")
             } else {
                 alert("请输入正确的手机号！")
             }
