--- a/nobug-shop-service/nobug-shop-service-payment/src/main/resources/templates/success.html
+++ b/nobug-shop-service/nobug-shop-service-payment/src/main/resources/templates/success.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -58,7 +58,7 @@
    <h2>您已成功付款</h2>
    <div class="successInfo">
      <ul>
-       <li>付款金额<em>¥9.90</em></li>
+       <li>付款金额<em th:text="${total_amount}"></em></li>
        <div class="user-info">
          <p>收货人：艾迪</p>
          <p>联系电话：15871145629</p>
@@ -69,8 +69,8 @@
      </ul>
      <div class="option">
        <span class="info">您可以</span>
-        <a href="person/order.html" class="J_MakePoint">查看<span>已买到的宝贝</span></a>
-        <a href="person/orderinfo.html" class="J_MakePoint">查看<span>交易详情</span></a>
+        <a href="/tOrder/queryAll" class="J_MakePoint">查看<span>已买到的宝贝</span></a>
+        <a href="/tOrderdetail/queryDetail" class="J_MakePoint">查看<span>交易详情</span></a>
      </div>
     </div>
   </div>
